--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,3 +20,7 @@ jobs:
         podman version
         podman build --build-arg quay_expiration=1w -t testbuild .
         podman image inspect testbuild
+        podman build --build-arg quay_expiration=2w -t testbuild2 .
+        podman image inspect testbuild2
+        podman build --label quay.expired-after=3w -t testbuild3 .
+        podman image inspect testbuild3
