--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
         podman version
         podman build --build-arg quay_expiration=1w -t testbuild1w .
         podman build --build-arg quay_expiration=2w -t testbuild2w .
-        podman build --label quay.expired-after=3w -t testbuild3w .
+        podman build --label quay.expires-after=3w -t testbuild3w .
         podman build -t testbuildnever .
         podman image inspect testbuild1w | jq .[0].Labels
         podman image inspect testbuild2w | jq .[0].Labels
