--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,12 +22,15 @@ jobs:
         podman build --build-arg quay_expiration=1w -t testbuild1w .
         podman build --build-arg quay_expiration=2w -t testbuild2w .
         podman build --label quay.expires-after=3w -t testbuild3w .
+        podman build --build-arg quay_expiration=never -t testbuildneverexplicit
 
         echo 1w
         podman image inspect testbuild1w | jq .[0].Labels
         echo 2w
         podman image inspect testbuild2w | jq .[0].Labels
-        echo 3w
+        echo "3w labeled using podman - this doesn't work"
         podman image inspect testbuild3w | jq .[0].Labels
         echo never
         podman image inspect testbuildnever | jq .[0].Labels
+        echo explicitnever
+        podman image inspect testbuildneverexplicit | jq .[0].Labels
