--- a/.github/workflows/workflow-call-image-create.yml
+++ b/.github/workflows/workflow-call-image-create.yml
@@ -18,7 +18,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
+      with:
+        path: dispatched
     - name: Build the Docker image
+      working-directory: dispatched
       run: |
         podman version
         podman build --build-args quay_expiration=${{ inputs.expires }} -t ${{ inputs.name }}:${{ inputs.tag }} .
