--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,11 +31,18 @@ jobs:
         echo 2w
         podman image inspect testbuild2w | jq .[0].Labels
 
+  build-neverexpire:
+    runs-on: ubuntu-latest
+    steps:
     - uses: ./.github/workflows/workflow-call-image-create.yml
       name: build neverexpire
       with:
         name: testbuild
         tag: neverexpire
+
+  build-withexpire:
+    runs-on: ubuntu-latest
+    steps:
     - uses: ./.github/workflows/workflow-call-image-create.yml
       name: build 1wexpire
       with:
